[project]
name = "braiins-hashpower-mcp"
version = "0.4.0"
description = "MCP server for the Braiins Hashpower Spot Market API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
braiins-hashpower-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
