[project]
name = "braiins-hashpower-mcp"
version = "1.0.5"
description = "MCP server for the Braiins Hashpower Spot Market API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
braiins-hashpower-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install hatchling build && python -m build"

[tool.semantic_release.publish]
upload_to_vcs_release = true
